tests/org.eclipse.php.core.tests/workspace/errors/php54/exclusive/unfinishedTraitBody1.pdtt
--TEST--
Test unfinished trait body error reporting
--FILE--
<?php
trait A {
$a = new A();
?>
--EXPECT--
[line=3, start=16, end=18] syntax error, unexpected '$a', expecting 'function'